FIX: Header Logo Width on Mobile Device

--- a/css/header.css
+++ b/css/header.css
@@ -49,7 +49,7 @@
 
 @media screen and (max-width: 720px) {
   .header-logo-scrolled {
-    max-width: 130px;
+    max-width: 170px;
   }
 }
 
